# backup

./: .gitignore  CMakeLists.txt  README.md
RustTutorial/ownership/src/: main.rs
code-chef/starters/64/broken-string/: solution.cpp
code-chef/starters/64/distinct-colors/: solution.cpp
codeforces/round-846/: output.txt
codeforces/round-846/hayato-and-school/: solution.cpp
codeforces/round_853/problem_A/: CMakeLists.txt  main.cpp
codeforces/round_853/problem_B/: CMakeLists.txt  main.cpp
cses-problem-set/AppleDivision/: input.txt  solution.cpp
cses-problem-set/BitStrings/: solution.cpp
cses-problem-set/ChessBoardAndQueens/: solution.cpp
cses-problem-set/CoinPiles/: input.txt  solution.cpp
cses-problem-set/CreatingStrings/: solution.cpp
cses-problem-set/DigitQueries/: input.txt  output.txt  solution.cpp
cses-problem-set/DistinctNumbers/: CMakeLists.txt  main.cpp
cses-problem-set/GrayCode/: solution.cpp
cses-problem-set/GridPaths/: main.cpp  output.txt  solution.cpp
cses-problem-set/IncreasingArray/: solution.cpp
cses-problem-set/MissingNumber/: solution.cpp
cses-problem-set/NumberSpiral/: input.txt  output.txt  solution.cpp
cses-problem-set/PalindromeReorder/: input.txt  solution.cpp
cses-problem-set/Permutations/: solution.cpp
cses-problem-set/Repetitions/: input.txt  solution.cpp
cses-problem-set/TowerOfHanoi/: solution.cpp
cses-problem-set/TrailingZeros/: solution.cpp
cses-problem-set/TwoKnights/: output.txt  solution.cpp
cses-problem-set/TwoSets/: solution.cpp
cses-problem-set/WeirdAlgorithm/: solution.cpp
(+110 files in other folders)
