cmake_minimum_required(VERSION 3.22)
project(backup)

set(CMAKE_CXX_STANDARD 14)

add_executable(backup
        code-chef/starters/64/broken-string/solution.cpp
        code-chef/starters/64/distinct-colors/solution.cpp
        code-chef/starters/64/luigi-and-uniformity/solution.cpp
        code-chef/starters/64/range-assign/solution.cpp
        coding-ninjas/milestones/four/BST/BST-from-sorted-array/solution.cpp
        coding-ninjas/milestones/four/BST/BST-to-sorted-linked-list/solution.cpp
        coding-ninjas/milestones/four/BST/exercises/create-and-insert-duplicate-node/solution.cpp
        coding-ninjas/milestones/four/BST/exercises/largest-BST/solution.cpp
        coding-ninjas/milestones/four/BST/exercises/LCA-of-a-binary-tree/solution.cpp
        coding-ninjas/milestones/four/BST/exercises/LCA-of-a-BST/solution.cpp
        coding-ninjas/milestones/four/BST/exercises/pair-sum-binary-tree/solution.cpp
        coding-ninjas/milestones/four/BST/exercises/replace-with-sum-of-greater-nodes/solution.cpp
        coding-ninjas/milestones/four/BST/find-path-in-BST/solution.cpp
        coding-ninjas/milestones/four/BST/implement-BST/solution.cpp
        coding-ninjas/milestones/four/BST/BinaryTree.cpp
        coding-ninjas/milestones/four/BST/LinkedList.cpp)
